--- a/sitecortel/style.css
+++ b/sitecortel/style.css
@@ -68,7 +68,7 @@ p#dois{
 
 .caixajoaninha{
 
-    background:url(imagens/background001.jpg) center center no-repeat fixed;
+    background:url(imagens/background001.jpg) center right no-repeat fixed;
     background-size: cover;
     padding: 30px 0;
 
@@ -84,7 +84,7 @@ p#cinco{
 
 .papel{
 
-    background: url(imagens/background002.jpg) center center no-repeat fixed;
+    background: url(imagens/background002.jpg) center right no-repeat fixed;
     background-size: cover;
     padding: 30px 0;
 
@@ -103,5 +103,5 @@ footer{
 
     color: white;
     text-decoration: none;
-    
+
 }
